--- a/test/integration/index.html
+++ b/test/integration/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 		<title>Key Value Database</title>
 
-		<script type="module" src="/index.js" defer></script>
+		<script type="module" src="/index.jsx" defer></script>
 	</head>
-	<body></body>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
